@@ -1,13 +1,14 @@
 package com.example.findy.controller;
 
-import org.springframework.web.bind.annotation.*;
-import java.util.List;
-import java.util.stream.Collectors;
-
 import com.example.findy.model.SavedJob;
 import com.example.findy.repository.SavedJobRepository;
+import com.example.findy.repository.JobRepository;
+import com.example.findy.model.Job;
 
+import org.springframework.web.bind.annotation.*;
 import jakarta.transaction.Transactional;
+
+import java.util.List;
 
 @RestController
 @RequestMapping("/api/saved-jobs")
@@ -15,41 +16,46 @@ import jakarta.transaction.Transactional;
 public class SavedJobController {
 
     private final SavedJobRepository repo;
+    private final JobRepository jobRepository;
 
-    public SavedJobController(SavedJobRepository repo) {
+    public SavedJobController(SavedJobRepository repo, JobRepository jobRepository) {
         this.repo = repo;
+        this.jobRepository = jobRepository;
     }
 
+    // ✅ Get all saved jobs for a user
     @GetMapping("/{userId}")
     public List<SavedJob> getSavedJobs(@PathVariable Long userId) {
         return repo.findByUserId(userId);
     }
 
-    // ✅ Save job and return updated job IDs
+    // ✅ Save a job and return updated saved job IDs
     @PostMapping
+    @Transactional
     public List<Long> saveJob(@RequestParam Long userId, @RequestParam Long jobId) {
         if (!repo.existsByUserIdAndJobId(userId, jobId)) {
             repo.save(new SavedJob(userId, jobId));
         }
-        return getJobIds(userId);
-    }
-
-    // ✅ Delete saved job and return updated job IDs
-    @Transactional
-    @DeleteMapping
-
-    public List<Long> removeSavedJob(@RequestParam Long userId, @RequestParam Long jobId) {
-        if (repo.existsByUserIdAndJobId(userId, jobId)) {
-            repo.deleteByUserIdAndJobId(userId, jobId);
-        }
-        return getJobIds(userId); // Always return 200 with updated job IDs
-    }
-
-    // ✅ Helper to get all saved job IDs for a user
-    private List<Long> getJobIds(Long userId) {
         return repo.findByUserId(userId)
                    .stream()
                    .map(SavedJob::getJobId)
-                   .collect(Collectors.toList());
+                   .toList();
+    }
+
+    // ✅ Remove a job and return updated saved job IDs
+    @DeleteMapping
+    @Transactional
+    public List<Long> removeSavedJob(@RequestParam Long userId, @RequestParam Long jobId) {
+        repo.deleteByUserIdAndJobId(userId, jobId);
+        return repo.findByUserId(userId)
+                   .stream()
+                   .map(SavedJob::getJobId)
+                   .toList();
+    }
+
+    // ✅ New endpoint: Fetch full job details for saved jobs
+    @GetMapping("/jobs/by-ids")
+    public List<Job> getJobsByIds(@RequestParam List<Long> ids) {
+        return jobRepository.findAllById(ids);
     }
 }
